# arbiter

./: .gitignore  README.md  pyproject.toml  run.sh
arbiter_core/: __init__.py  app.py  skills.py
arbiter_core/init/: __init__.py  boot.py
arbiter_core/process/: __init__.py  manager.py
arbiter_core/tools/: __init__.py  registry.py
config/: routing.toml
config/nodes/: gpd-pocket-4.toml  thinkcentre.toml
docs/: ARCHITECTURE.md  CIN-OVERVIEW.md  CONFIGURATION.md  PHASES.md
skills/: domain-intel.yaml
tests/: test_config_loader.py  test_os_layer.py
